Tourism/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-tourism-service
  namespace: tourism
spec:
  type: NodePort
  selector:
    app: smart-tourism-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
      nodePort: 30080
